Version 0.1.0+dev
- raised minimal version of PHP to 7
- empty line at end of source files is ignored now

Version 0.1.0
- initial version