@@ -1,7 +1,6 @@
 <html>
 <head>
   <meta charset=\"utf-8\">
-  <title></title>
 </head>
 <body>
 <h1>Index</h1>
