@@ -1,6 +1,7 @@
 Version 0.1.0+dev
 - raised minimal version of PHP to 7
 - empty line at end of source files is ignored now
+- generated pages no longer contain empty <title> if the title is not defined
 
 Version 0.1.0
 - initial version
